2007-01-26  Philip Van Hoof  <pvanhoof@gnome.org>

	* Added the tny_account_set/get_mech API

	* This was a major API change

2007-01-26  Sergio Villar Senin <svillar@igalia.com>

	* Fixed the implementation of tny_camel_header_get_xxx methods. Now
	they return NULL whenever an error happens (or if the attribute hasn't
	a value yet) instead of the string "Invalid". The documentation has
	been updated also.

2007-01-26  Philip Van Hoof  <pvanhoof@gnome.org>

	* Renamed tny_folder_expunge to tny_folder_sync, and made it possible
	to sync without expunging

	* This was a major API change

2007-01-25  Sergio Villar Senin <svillar@igalia.com>

	* Fixed a comparison in an if statement

2007-01-25 Dirk-Jan C. Binnema <djcb@djcbsoftware.nl>

	* Added TNY_FOLDER_TYPE_ARCHIVE and TNY_FOLDER_TYPE_NUM

2007-01-25  Philip Van Hoof  <pvanhoof@gnome.org>

	* Added a CamelStreamGZip which might someday be used to support the
	COMPRESS capability of some LEMONADE-enabled IMAP servers. This new
	type is experimental and not sufficiently tested for real use.

2007-01-24  Sergio Villar Senin <svillar@igalia.com>

	* libtinymail-camel/tny-camel-mime-part.c: added a missing unlock

2007-01-23  Philip Van Hoof <pvanhoof@gnome.org>

	* Several locking fixes when retrieving summary info
	* Performance improvements in camel-imap-folder.c
	* Bandwidth improvements for the IMAP provider

2007-01-22  Philip Van Hoof <pvanhoof@gnome.org>

	* Preperation for notification of changes in folders, mostly bugfixes
	* More camel-folder-summary.c memory corruption bugfixes 
	* Added for-now unstable camel-lite API: camel_store_get_recent_messages
	Do not yet use this API, unless you want to screwup your IMAP
	connection significantly enough to make using tinymail impossible.
	* Several bugfixes in CamelImapFolder
	* Invalid UTF-8 in TnyGtkTextBufferStream solution
	* Removed an unneeded hashtable from CamelFolderSummary, reducing
	memory consumption
	* Performance improvements
